tests/functional/lang/eval-fail-assert-and-equal-lhs.err.exp
error:
       … while evaluating the condition of the assertion '((1 == 2) && (3 == 3))'
         at /pwd/lang/eval-fail-assert-and-equal-lhs.nix:1:1:
            1| assert 1 == 2 && 3 == 3;
             | ^
            2| abort "unreachable"

       … while evaluating the left operand of the && operator
         at /pwd/lang/eval-fail-assert-and-equal-lhs.nix:1:15:
            1| assert 1 == 2 && 3 == 3;
             |               ^
            2| abort "unreachable"

       error: an integer with value '1' is not equal to an integer with value '2'
